adding more to docker

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,9 @@ TTS_SERVICE=azure # or google
 LLM_SERVICE=azure # or openai
 IMAGE_GEN_SERVICE=azure # or openai
 
+#Needed when using a docker container
+#PORT 
+
 # Your Daily API key (to create new rooms and meeting tokens)
 DAILY_API_KEY=
 
